Built the Discover page: implemented the category filter, post feed with data fetching, and post detail modal (likes and comments are currently static placeholders).